Fix header descriptions

--- a/config/bash/.inputrc
+++ b/config/bash/.inputrc
@@ -1,6 +1,6 @@
 #-------------------------------------------------------------------------------
 # @link          http://kenijo.github.io/WSH/
-# @description   Custom inputrc
+# @description   Initialization script when starting console
 # @license       MIT License
 #-------------------------------------------------------------------------------
 
